<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@color/grey"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.07">


        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:orientation="vertical">

            <TextView
                android:id="@+id/job_txt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:focusable="false"
                android:clickable="false"
                android:text="@string/jobs"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="3.22"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/company_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:focusable="false"
                    android:clickable="false"
                    android:text="@string/company"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/country_img"
                    android:layout_width="18dp"
                    android:layout_height="23dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.1"

                    android:src="@mipmap/ic_launcher_cal" />

                <TextView
                    android:id="@+id/time_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:focusable="false"
                    android:clickable="false"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/yrs_img"
            android:layout_width="18dp"
            android:layout_height="22dp"
            android:layout_marginTop="12dp"
            android:layout_weight="0.1"

            android:contentDescription="@string/hello_world"
            android:src="@mipmap/ic_launcher_exp" />

        <TextView
            android:id="@+id/years_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:focusable="false"
            android:clickable="false"
            android:text="@string/years"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/locatin_img"
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.1"
            android:contentDescription="@string/hello_world"
            android:src="@mipmap/ic_launcher_loc" />

        <TextView
            android:id="@+id/location_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:focusable="false"
            android:clickable="false"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/desc_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="8dp"
        android:paddingBottom="8dp"
        android:focusable="false"
        android:clickable="false"
        android:paddingTop="8dp"
        android:text="@string/text"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:typeface="serif" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/skils_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/skils"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/lang_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.99"
            android:gravity="left"
            android:focusable="false"
            android:clickable="false"
            android:text="@string/lang"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/apply_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.1"
            android:focusable="false"
            android:clickable="false"
            android:background="@drawable/shape"
            android:text="Apply"
            android:textColor="@color/textColorPrimary"

            android:textSize="18sp" />

    </LinearLayout>


</LinearLayout>